--- a/InetMarket/Views/Products/Create.cshtml
+++ b/InetMarket/Views/Products/Create.cshtml
@@ -42,9 +42,11 @@
                 </div>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                <label class="control-label">Category</label><br />
+                @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
+                @*<label asp-for="CategoryId" class="control-label"></label>*@
+                @*<input asp-for="CategoryId" class="form-control" />*@
+                @*<span asp-validation-for="CategoryId" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
