--- a/InetMarket/Views/Products/Create.cshtml
+++ b/InetMarket/Views/Products/Create.cshtml
@@ -44,9 +44,6 @@
             <div class="form-group">
                 <label class="control-label">Category</label><br />
                 @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
-                @*<label asp-for="CategoryId" class="control-label"></label>*@
-                @*<input asp-for="CategoryId" class="form-control" />*@
-                @*<span asp-validation-for="CategoryId" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -54,9 +51,8 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BrandId" class="control-label"></label>
-                <input asp-for="BrandId" class="form-control" />
-                <span asp-validation-for="BrandId" class="text-danger"></span>
+                <label class="control-label">Brand</label><br />
+                @Html.DropDownListFor(model => model.BrandId, ViewBag.Brands as SelectList)
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
