--- a/InetMarket/Views/Shared/_Layout.cshtml
+++ b/InetMarket/Views/Shared/_Layout.cshtml
@@ -31,8 +31,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
+                    <li><a asp-area="" asp-controller="Categories" asp-action="Index">Категории</a></li>
+                    <li><a asp-area="" asp-controller="Orders" asp-action="Index">Заказы</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                 </ul>
             </div>
         </div>
