--- a/InetMarket/Views/Categories/Index.cshtml
+++ b/InetMarket/Views/Categories/Index.cshtml
@@ -28,7 +28,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                <a asp-area="" asp-controller="Products" asp-action="ListForCategories" asp-route-categoryId="@item.Id">Products</a>
             </td>
         </tr>
 }
