--- a/InetMarket/Views/Shared/_Layout.cshtml
+++ b/InetMarket/Views/Shared/_Layout.cshtml
@@ -30,13 +30,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Index">Категории</a></li>
                     <li><a asp-area="" asp-controller="Orders" asp-action="Index">Заказы</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
+                    <li><a asp-area="" asp-controller="Brands" asp-action="Index">Brands</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                 </ul>
             </div>
         </div>
