--- a/InetMarket/Views/Shared/_Layout.cshtml
+++ b/InetMarket/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Categories" asp-action="Index">Категории</a></li>
                     <li><a asp-area="" asp-controller="Orders" asp-action="Index">Заказы</a></li>
                     <li><a asp-area="" asp-controller="Brands" asp-action="Index">Brands</a></li>
+                    <li><a asp-area="" asp-controller="Providers" asp-action="Index">Providers</a></li>
                     <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                 </ul>
             </div>
