--- a/InetMarket/Views/Products/Details.cshtml
+++ b/InetMarket/Views/Products/Details.cshtml
@@ -58,6 +58,12 @@
         <dd>
             @Html.DisplayFor(model => model.BrandId)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProviderId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProviderId)
+        </dd>
     </dl>
 </div>
 <div>
