--- a/InetMarket/Views/Shared/_Layout.cshtml
+++ b/InetMarket/Views/Shared/_Layout.cshtml
@@ -35,9 +35,11 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Index">Категории</a></li>
                     <li><a asp-area="" asp-controller="Orders" asp-action="Index">Заказы</a></li>
-                    <li><a asp-area="" asp-controller="Brands" asp-action="Index">Brands</a></li>
-                    <li><a asp-area="" asp-controller="Providers" asp-action="Index">Providers</a></li>
-                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                    <li><a asp-area="" asp-controller="Brands" asp-action="Index">Марки авто</a></li>
+                    <li><a asp-area="" asp-controller="Providers" asp-action="Index">Поставщики</a></li>
+                    <li><a asp-area="" asp-controller="Filters" asp-action="Index">Фильтры</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Продукция</a></li>
+                    <li><a asp-area="" asp-controller="Clients" asp-action="Index">Клиенты</a></li>
                 </ul>
             </div>
         </div>
