--- a/InetMarket/Views/Categories/Create.cshtml
+++ b/InetMarket/Views/Categories/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InetMarket.Models.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Добавление категории";
 }
 
-<h2>Create</h2>
+<h2>Добавление</h2>
 
-<h4>Category</h4>
+<h4>Категория</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +18,14 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку</a>
 </div>
 
 @section Scripts {
