--- a/InetMarket/Views/Categories/Delete.cshtml
+++ b/InetMarket/Views/Categories/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model InetMarket.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удаление категории";
 }
 
-<h2>Delete</h2>
+<h2>Удаление</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Хотите удалить?</h3>
 <div>
-    <h4>Category</h4>
+    <h4>Категория</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-default" /> |
+        <a asp-action="Index">Назад к списку</a>
     </form>
 </div>
