--- a/InetMarket/Views/Clients/Create.cshtml
+++ b/InetMarket/Views/Clients/Create.cshtml
@@ -1,22 +1,17 @@
-﻿@model InetMarket.Models.Order
+﻿@model InetMarket.Models.Client
 
 @{
-    ViewData["Title"] = "Добавление заказа";
+    ViewData["Title"] = "Добавление клиента";
 }
 
-<h2>Добавить</h2>
+<h2>Добавление</h2>
 
-<h4>Заказ</h4>
+<h4>Клиент</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -31,20 +26,6 @@
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateTime" class="control-label"></label>
-                <input asp-for="DateTime" class="form-control" />
-                <span asp-validation-for="DateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Client</label><br />
-                @Html.DropDownListFor(model => model.ClientId, ViewBag.Clients as SelectList)
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить" class="btn btn-default" />
