--- a/InetMarket/Views/Clients/Edit.cshtml
+++ b/InetMarket/Views/Clients/Edit.cshtml
@@ -1,23 +1,18 @@
-﻿@model InetMarket.Models.Order
+﻿@model InetMarket.Models.Client
 
 @{
-    ViewData["Title"] = "Изменение заказа";
+    ViewData["Title"] = "Изменение клиента";
 }
 
 <h2>Изменение</h2>
 
-<h4>Заказ</h4>
+<h4>Клиент</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -32,20 +27,6 @@
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateTime" class="control-label"></label>
-                <input asp-for="DateTime" class="form-control" />
-                <span asp-validation-for="DateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Client</label><br />
-                @Html.DropDownListFor(model => model.ClientId, ViewBag.Clients as SelectList)
             </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-default" />
