--- a/InetMarket/Views/Filters/Create.cshtml
+++ b/InetMarket/Views/Filters/Create.cshtml
@@ -1,25 +1,28 @@
-﻿@model InetMarket.Models.Category
+﻿@model InetMarket.Models.Filter
 
 @{
-    ViewData["Title"] = "Изменение категории";
+    ViewData["Title"] = "Добавление фильтра";
 }
 
-<h2>Изменение</h2>
+<h2>Добавление</h2>
 
-<h4>Категория</h4>
+<h4>Фильтр</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
+                <label class="control-label">Category</label><br />
+                @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
         </form>
     </div>
