--- a/InetMarket/Views/Filters/Edit.cshtml
+++ b/InetMarket/Views/Filters/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model InetMarket.Models.Category
+﻿@model InetMarket.Models.Filter
 
 @{
-    ViewData["Title"] = "Изменение категории";
+    ViewData["Title"] = "Изменение фильтра";
 }
 
-<h2>Изменение</h2>
+<h2>Изменить</h2>
 
-<h4>Категория</h4>
+<h4>Фильтр</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,6 +17,10 @@
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Category</label><br />
+                @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
             </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-default" />
