--- a/InetMarket/Views/Products/Create.cshtml
+++ b/InetMarket/Views/Products/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InetMarket.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Добавление продукта";
 }
 
-<h2>Create</h2>
+<h2>Добавить</h2>
 
-<h4>Product</h4>
+<h4>Продукт</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -59,14 +59,14 @@
                 @Html.DropDownListFor(model => model.ProviderId, ViewBag.Providers as SelectList)
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку</a>
 </div>
 
 @section Scripts {
