--- a/InetMarket/Views/Products/Details.cshtml
+++ b/InetMarket/Views/Products/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model InetMarket.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Подробно о продукте";
 }
 
-<h2>Details</h2>
+<h2>Подробно</h2>
 
 <div>
-    <h4>Product</h4>
+    <h4>Продукт</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -67,6 +67,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Изменить</a> |
+    <a asp-action="Index">Назад к списку</a>
 </div>
