--- a/InetMarket/Views/Providers/Delete.cshtml
+++ b/InetMarket/Views/Providers/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InetMarket.Models.Provider
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удаление поставщика";
 }
 
-<h2>Delete</h2>
+<h2>Удаление</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Хотите удалить?</h3>
 <div>
     <h4>Provider</h4>
     <hr />
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-default" /> |
+        <a asp-action="Index">Назад к списку</a>
     </form>
 </div>
