--- a/InetMarket/Views/Providers/Details.cshtml
+++ b/InetMarket/Views/Providers/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model InetMarket.Models.Provider
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Подробно о поставщике";
 }
 
-<h2>Details</h2>
+<h2>Подробно</h2>
 
 <div>
-    <h4>Provider</h4>
+    <h4>Поставщик</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Изменить</a> |
+    <a asp-action="Index">Назад к списку</a>
 </div>
