--- a/InetMarket/Views/Providers/Index.cshtml
+++ b/InetMarket/Views/Providers/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<InetMarket.Models.Provider>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Список поставщиков";
 }
 
-<h2>Index</h2>
+<h2>Список</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.DateTime)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Подробно</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
