--- a/InetMarket/Views/Shared/_Layout.cshtml
+++ b/InetMarket/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li><a asp-area="" asp-controller="Brands" asp-action="Index">Марки авто</a></li>
                     <li><a asp-area="" asp-controller="Providers" asp-action="Index">Поставщики</a></li>
                     <li><a asp-area="" asp-controller="Filters" asp-action="Index">Фильтры</a></li>
+                    <li><a asp-area="" asp-controller="FilterAddititons" asp-action="Index">Доп. фильтры</a></li>
                     <li><a asp-area="" asp-controller="Products" asp-action="Index">Продукция</a></li>
                     <li><a asp-area="" asp-controller="Clients" asp-action="Index">Клиенты</a></li>
                 </ul>
