--- a/InetMarket/Views/Products/Index.cshtml
+++ b/InetMarket/Views/Products/Index.cshtml
@@ -12,8 +12,11 @@
 
 <form method="get">
     <div class="form-inline">
-        <label class="control-label">Categories: </label>
+        <label class="control-label">Категории: </label>
         @Html.DropDownList("categoryId", Model.Categories as SelectList,
+                    htmlAttributes: new { @class = "form-control" })
+         <label class="control-label">Фильтры: </label>
+        @Html.DropDownList("filterId", Model.Filters as SelectList,
                     htmlAttributes: new { @class = "form-control" })
         <input type="submit" value="Фильтр" class="btn btn-default" />
     </div>
