--- a/InetMarket/Views/Brands/Index.cshtml
+++ b/InetMarket/Views/Brands/Index.cshtml
@@ -4,10 +4,14 @@
     ViewData["Title"] = "Список марок";
 }
 
+<div id="modDialog" class="modal fade">
+    <div id="dialogContent" class="modal-dialog"></div>
+</div>
+
 <h2>Список марок</h2>
 
 <p>
-    <a asp-action="Create">Добавить</a>
+    @Html.ActionLink("Добавить", "Create", new { }, new { @class = "compItem" })
 </p>
 <table class="table">
     <thead>
@@ -25,11 +29,13 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Подробно</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                @Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "compItem" }) |
+                @Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "compItem" }) |
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "compItem" })
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<script type="text/javascript" src="~/js/test.js" defer></script>
