--- a/InetMarket/Views/Filters/CategorySearch.cshtml
+++ b/InetMarket/Views/Filters/CategorySearch.cshtml
@@ -27,9 +27,10 @@
                     @Html.DisplayFor(modelItem => item.Category.Title)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Подробно</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                    @Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "compItem" }) |
+                    @Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "compItem" }) |
+                    @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "compItem" }) |
+                    @Html.ActionLink("Доп фильтры", "FilterSearch", new { filterId = item.Id }, new { @class = "compItem" })
                 </td>
             </tr>
         }
