--- a/InetMarket/Views/Filters/Create.cshtml
+++ b/InetMarket/Views/Filters/Create.cshtml
@@ -1,37 +1,35 @@
 ﻿@model InetMarket.Models.Filter
 
-@{
-    ViewData["Title"] = "Добавление фильтра";
-}
-
-<h2>Добавление</h2>
-
-<h4>Фильтр</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+<div class="modal-content">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal" area-hidden="true">Закрыть</button>
+        <h4>Добавление</h4>
+    </div>
+    <div class="modal-body">
+        <h4>Фильтр</h4>
+        <hr />
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Category</label><br />
+                        @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Добавить" class="btn btn-default" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label class="control-label">Category</label><br />
-                @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Добавить" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Назад к списку</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
