--- a/InetMarket/Views/Products/Delete.cshtml
+++ b/InetMarket/Views/Products/Delete.cshtml
@@ -1,69 +1,70 @@
 ﻿@model InetMarket.Models.Product
 
-@{
-    ViewData["Title"] = "Удаление продукта";
-}
+<div class="modal-content">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal" area-hidden="true">Закрыть</button>
+        <h4>Удаление</h4>
+    </div>
+    <div class="modal-body">
+        <h3>Хотите удалить?</h3>
+        <div>
+            <h4>Продукт</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Title)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Title)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.MainImage)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.MainImage)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.IsDiscount)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.IsDiscount)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.IsMane)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.IsMane)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.CategoryId)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CategoryId)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BrandId)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.BrandId)
+                </dd>
+            </dl>
 
-<h2>Удаление</h2>
-
-<h3>Хотите удалить?</h3>
-<div>
-    <h4>Продукт</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.MainImage)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MainImage)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDiscount)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsDiscount)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsMane)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsMane)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CategoryId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.BrandId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.BrandId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Удалить" class="btn btn-default" /> |
-        <a asp-action="Index">Назад к списку</a>
-    </form>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Удалить" class="btn btn-default" /> |
+            </form>
+        </div>
+    </div>
 </div>
