--- a/InetMarket/Views/Products/Edit.cshtml
+++ b/InetMarket/Views/Products/Edit.cshtml
@@ -1,75 +1,73 @@
 ﻿@model InetMarket.Models.Product
 
-@{
-    ViewData["Title"] = "Изменение продукта";
-}
-
-<h2>Изменить</h2>
-
-<h4>Продукт</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+<div class="modal-content">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal" area-hidden="true">Закрыть</button>
+        <h4>Подробно</h4>
+    </div>
+    <div class="modal-body">
+        <h4>Продукт</h4>
+        <hr />
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="MainImage" class="control-label"></label>
+                        <input asp-for="MainImage" class="form-control" />
+                        <span asp-validation-for="MainImage" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="IsDiscount" /> @Html.DisplayNameFor(model => model.IsDiscount)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="IsMane" /> @Html.DisplayNameFor(model => model.IsMane)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Category</label><br />
+                        @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Price" class="control-label"></label>
+                        <input asp-for="Price" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Brand</label><br />
+                        @Html.DropDownListFor(model => model.BrandId, ViewBag.Brands as SelectList)
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Provider</label><br />
+                        @Html.DropDownListFor(model => model.ProviderId, ViewBag.Providers as SelectList)
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Сохранить" class="btn btn-default" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MainImage" class="control-label"></label>
-                <input asp-for="MainImage" class="form-control" />
-                <span asp-validation-for="MainImage" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsDiscount" /> @Html.DisplayNameFor(model => model.IsDiscount)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsMane" /> @Html.DisplayNameFor(model => model.IsMane)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Category</label><br />
-                @Html.DropDownListFor(model => model.CategoryId, ViewBag.Categories as SelectList)
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Brand</label><br />
-                @Html.DropDownListFor(model => model.BrandId, ViewBag.Brands as SelectList)
-            </div>
-            <div class="form-group">
-                <label class="control-label">Provider</label><br />
-                @Html.DropDownListFor(model => model.ProviderId, ViewBag.Providers as SelectList)
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Назад к списку</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
