--- a/InetMarket/Views/Providers/Details.cshtml
+++ b/InetMarket/Views/Providers/Details.cshtml
@@ -1,48 +1,52 @@
 ﻿@model InetMarket.Models.Provider
 
-@{
-    ViewData["Title"] = "Подробно о поставщике";
-}
-
-<h2>Подробно</h2>
-
-<div>
-    <h4>Поставщик</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Product)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Product)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Count)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Count)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateTime)
-        </dd>
-    </dl>
+<div class="modal-content">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal" area-hidden="true">Закрыть</button>
+        <h4>Подробно</h4>
+    </div>
+    <div class="modal-body">
+        <div>
+            <h4>Поставщик</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Title)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Title)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Product)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Product)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Count)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Count)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DateTime)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.DateTime)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }, new { @class = "compItem" }) |
+            @Html.ActionLink("Удалить", "Delete", new { id = Model.Id }, new { @class = "compItem" })
+        </div>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Изменить</a> |
-    <a asp-action="Index">Назад к списку</a>
-</div>
+
+<script type="text/javascript" src="~/js/test.js" defer></script>
